# S.O.N.A.R.

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sonar_oui.csv
.omo/evidence/: f1-plan-compliance.txt  f2-code-quality.txt  f4-scope-fidelity.txt  task-1-all-deps-import.txt  task-1-pyshark-import.txt  task-1-scaffold-files.txt  task-10-verification.txt  task-2-all-tests-pass.txt  task-2-wal-dedup.txt  task-3-qa.txt  task-4-test-run.txt  task-5-database-crud.txt  task-6-implementation-summary.txt  task-6-test-results.txt  task-7-help.txt  task-7-interfaces.txt  task-7-list.txt  task-7-scan.txt  task-7-test-results.txt  task-8-test-run.txt  task-9-full-suite.txt  task-9-integration-run.txt  test_qa.db
.omo/evidence/f3-manual-qa/: SUMMARY.txt  scenario11_pytest.txt  scenario12_export.json  scenario12_step1_scan.txt  scenario12_step2_list.txt  scenario12_step3_export.txt  scenario1_help_export.txt  scenario1_help_interfaces.txt  scenario1_help_list.txt  scenario1_help_main.txt  scenario1_help_scan.txt  scenario2_scan_arp.txt  scenario3_list.txt  scenario4_export_stdout.txt  scenario5_export_file.txt  (+4 more)
.omo/plans/: nvs-core-scanner.md
.omo/run-continuation/: ses_10ae7e7daffeIfGrDgoqvn7IQH.json  ses_10b3b12f3ffe2U0eHXP1djUcBy.json
scripts/: download_oui.py
src/sonar/: __main__.py  arp_cache.py  capture.py  cli.py  database.py  discover.py  exporter.py  fingerprint.py  models.py
tests/: conftest.py  test_arp_cache.py  test_capture.py  test_cli.py  test_database.py  test_discover.py  test_exporter.py  test_fingerprint.py  test_integration.py
