[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar"
version = "0.1.0"
description = "Silent Observer for Network ARP & Reconnaissance — Passive Network Device Discovery & Inventory"
requires-python = ">=3.10"
dependencies = [
    "pyshark==0.6",
    "rich==15.0.0",
    "click==8.4.1",
    "python-dotenv==1.2.2",
]

[project.scripts]
sonar = "sonar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
